--- a/example/lib/example_web/templates/secret/index.html.eex
+++ b/example/lib/example_web/templates/secret/index.html.eex
@@ -1,7 +1,6 @@
 <section class="phx-hero">
-  <h1>You're testing out Überauth/Azure AD!</h1> <p>Thanks for taking the time
-  to make sure things work as advertised. The <em>secret page</em> above
-  requires authentication. Have fun.</p>
+  <h1>SUPER SECRET PAGE</h1>
+  <p>You made it! Now SSSHHHHHHHHHH!</p>
 </section>
 
 <section class="row">
